# rodio

./: .gitignore  analyze_output.txt  end.txt  fix_extract.py  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/cpp/: EqualizerEngine.cpp  EqualizerEngine.h
android/src/main/kotlin/com/flutter_rust_bridge/audio_core/: CppEqualizerProcessor.kt  CppFingerprintProcessor.kt  FFTAudioProcessor.kt  MyExoplayerPlugin.kt
apple/Classes/: AudioCorePlugin.swift  SecurityScopedFileAccess.swift
example/: pubspec.yaml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/audio_core_example/: MainActivity.kt
example/android/app/src/main/kotlin/com/example/audio_visualizer_player_example/: MainActivity.kt
example/lib/: android_media_library_picker.dart  audio_handler.dart  fade_demo_tab.dart  main.dart  random_lab_tab.dart  widgets.dart
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
ios/: audio_core.podspec
lib/: audio_core.dart  audio_visualizer_player.dart
lib/src/: android_media_library.dart  equalizer_controller.dart  fft_processor.dart  player_controller.dart  player_models.dart  player_state_snapshot.dart  playlist_controller.dart  playlist_models.dart  random_playback_manager.dart  visualizer_controller.dart  visualizer_output_manager.dart  visualizer_output_stream.dart  visualizer_player_controller.dart  waveform_pcm_processor.dart
lib/src/audio_engine/: android_audio_engine.dart  apple_audio_engine.dart  audio_engine_interface.dart  pcm_waveform_support.dart  rust_audio_engine.dart  rust_metadata_bridge.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: simple.dart  simple_api.dart
lib/src/rust/api/simple/: controller.dart  equalizer.dart  metadata.dart  waveform.dart
macos/: audio_core.podspec
plugin/: my_exoplayer.7z
rust/: Cargo.toml
rust/acoustid_getter/: Cargo.toml
rust/acoustid_getter/src/: main.rs
rust/src/: frb_generated.rs  main copy.rs  main.rs
rust/src/api/: simple.rs
rust/src/api/simple/: audio_fingerprint.rs  controller.rs  metadata.rs  waveform.rs
test/: waveform_pcm_processor_test.dart
