[package]
name = "audio_visualizer_player"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0.102"
ringbuf = "0.4.8"
crossbeam-channel = "0.5.15"
rodio = { version = "0.22.1", default-features = true, features = ["symphonia-all"] }
symphonia = { version = "0.5.5", features = ["all"] }


cpal = "0.17.3"
realfft = "3.5.0"
serde_json = "1.0.149"
android_logger = "0.15.1"
log = "0.4.29"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }


[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"
