[package]
name = "audio_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0.102"
ringbuf = "0.4.8"
crossbeam-channel = "0.5.15"
rodio = { path = "./rodio", default-features = true, features = ["symphonia-all"] }
symphonia = { version = "0.5.5", features = ["all"] }


cpal = "0.17.3"
realfft = "3.5.0"
serde_json = "1.0.149"
base64 = "0.22.1"
rusty-chromaprint = "0.3.0"
android_logger = "0.15.1"
log = "0.4.29"

windows = { version = "0.52", features = [
    "Win32_Media_Audio",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_Com",
] }
fundsp = "0.23.0"
lofty = "0.23.3"
id3 = "1.16.4"



[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }


[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"
