[package]
name = "audio_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0.102"
lofty = "0.23.3"
id3 = "1.16.4"
log = "0.4.29"
base64 = "0.22.1"


[target.'cfg(not(any(target_os = "ios", target_os = "macos")))'.dependencies]
rusty-chromaprint = "0.3.0"
symphonia = { version = "0.5.5", features = ["all"] }
rodio = { path = "./rodio", default-features = true, features = ["symphonia-all"] }
realfft = "3.5.0"
fundsp = "0.23.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Media_Audio",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_Com",
] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }


